source/main.scss
/* ... */
input[type=color]::-webkit-color-swatch {
    border: none;
}

input::-webkit-calendar-picker-indicator,
input::-webkit-search-cancel-button {
    width: var(--space-medium);
    height: var(--space-medium);
    margin: 0;
    padding: 0;
    margin-right: var(--space-small);
    background: none;
    background-color: var(--color-accent);
    border-radius: var(--space-medium);
    transition-delay: 0;
    transition-duration: var(--hover-transition-duration);
    transition-property: background-color;
    transition-timing-function: ease;
    cursor: pointer;
    -webkit-appearance: none;
}

input::-webkit-calendar-picker-indicator:hover,
input::-webkit-search-cancel-button:hover {
    background-color: var(--color-accent-special);
}

input[type=file] {
    padding: 0;
}

input[type=file]::file-selector-button {
    background-color: var(--color-accent);
    font-weight: var(--font-weight-large);
    color: var(--color-page);
    font-size: 1rem;
    height: 100%;
    border: none;
    outline: none;
    cursor: pointer;
}

input[type=file]::file-selector-button:hover {
    background-color: var(--color-accent-special);
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    display: none;
}

input[type=range] {
    cursor: pointer;
    padding: 0;
}

input[type=range]::-webkit-slider-runnable-track {
    height: 100%;
    padding: 0;
    background-color: transparent;
}

input[type=range]::-webkit-slider-thumb {
    height: var(--input-size);
    width: var(--input-size);
    -webkit-appearance: none;
}

textarea {
    min-height: var(--input-size);
    resize: vertical;
}

::-webkit-resizer {
    background-color: var(--color-accent);
    border-top-left-radius: var(--border-radius);
    border-bottom-right-radius: var(--border-radius);
}

// Switch

input[type=checkbox].switch,
input[type=radio].switch {
    position: relative;
    border: none;
    background-color: var(--color-input);
    width: calc(var(--space-larger) * 3);
    cursor: pointer;
}

input[type=checkbox].switch::after,
input[type=radio].switch::after {
    content: "OFF";
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: var(--font-size-smaller);
    font-weight: var(--font-weight-large);
    color: var(--color-page);
    top: 0;
    left: 0;
    width: 50%;
    height: 100%;
    background-color: var(--color-negative);
    border-radius: var(--border-radius);
    border: none;
    transform: none;
}

input[type=checkbox].switch:checked::after,
input[type=radio].switch:checked::after {
    content: "ON";
    background-color: var(--color-accent);
    left: 50%;
}

// Loading Animation

.loading {
    position: relative;
    overflow: visible;
}

.loading::before {
    content: " ";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: black;
    opacity: var(--translucent-opacity);
    border-radius: var(--border-radius);
    z-index: 150;
}

.loading:after {
    content: " ";
    position: absolute;
    width: var(--space-larger);
    height: var(--space-larger);
    top: calc(50% - var(--space-larger));
    left: calc(50% - var(--space-larger));
    border-radius: 50%;
    border: var(--space-small) solid var(--color-accent);
    border-color: transparent var(--color-accent) transparent var(--color-accent);
    animation: loading 1s ease-in-out infinite;
    z-index: 151;
}

.removed {
    display: none;
}

@keyframes loading {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(180deg);
    }
}

// Scrollbar

::-webkit-scrollbar {
    width: var(--space-small);
}

::-webkit-scrollbar-track {
    background-color: var(--color-page-special);
}

::-webkit-scrollbar-corner {
    background-color: var(--color-page-special);
}

::-webkit-scrollbar-thumb {
    background-color: var(--color-accent-special);
}

